# s3m2p

./: .gitignore  .kilocodeignore  AGENTS.md  CLAUDE.md  CLAUDE_PROMPT_learn_sim_apps.md.backup  CLAUDE_PROMPT_mobile_landing_polish.md  CLAUDE_PROMPT_vision_i18n.md  Caddyfile  Cargo.toml  FIELD_MANUAL.md  KILO.md  LICENSE  NETWORK_DEV.md  PLANNER.md  REFACTOR.md  REFACTOR_BY_CODEX.md  RERUN_PR_TODO.md  VISION.ar.md  VISION.es.md  VISION.hi.md  VISION.md  VISION.zh.md  WORKFLOW.md  deny.toml  dev  package.json  playwright.config.ts  rust-toolchain.toml  setup
ARCH/: CLAUDE.md  Cargo.toml  index.html
ARCH/src/: audit.rs  db.json  events.rs  graph.rs  lib.rs  render.rs  workspace_data.json
ATLAS/: Cargo.toml  Trunk.toml  index.html
ATLAS/CORE/GEO_ENGINE/: Cargo.toml
ATLAS/src/: lib.rs
BLOG/: CLAUDE.md  Cargo.toml  Trunk.toml  index.html
BLOG/images/fcc-guide/: CREDITS.md
BLOG/posts/: building-too-foo.md  claude-automation-daemon.md  fcc-class-b-robotics-guide.md  hello-world.md  index.json  iso-13482-personal-care-robots.md  robot-characterization-manufacturing-qa.md  vla-revolution.md
BLOG/src/: lib.rs  render.rs  router.rs
DNA/: CLAUDE.md  Cargo.toml  METADATA_SUMMARY.md  README.md  SECURITY.md
DNA/CLAUDE_AUTOMATION/src/: agent_router.rs  config.rs  github.rs  main.rs  session.rs  state.rs  webhook.rs  worktree.rs
DNA/SECURITY_CLI/: Cargo.toml  README.md
DNA/SECURITY_CLI/src/: main.rs
DNA/SIMULATION_CLI/src/: main.rs
DNA/STORAGE_SERVER/: README.md
DNA/STORAGE_SERVER/deploy/: run-local.sh  setup.sh  sync-atlas-data.sh
DNA/STORAGE_SERVER/src/: atlas.rs  main.rs
DNA/examples/: ecosystem_sweep.rs
DNA/src/: color.rs  ekf.rs  heliosphere.rs  heliosphere_model.rs  interaction.rs  lib.rs  mat2.rs  pathfinding.rs  random.rs  solar_wind.rs  spatial.rs  statistics.rs  zones.rs
DNA/src/autocrate/: calculator.rs  constants.rs  design.rs  geometry.rs  mod.rs  reports.rs  types.rs
DNA/src/cad/: boolean.rs  constraints.rs  extrude.rs  geometry.rs  intersect.rs  mesh.rs  mod.rs  pattern.rs  primitives.rs  revolve.rs  sketch.rs  solver.rs  topology.rs
DNA/src/data/: arena.rs  graph.rs  mesh.rs  mod.rs  spatial_grid.rs
DNA/src/export/: gerber.rs  mod.rs  pdf.rs  step.rs  stl.rs
DNA/src/math/: mat.rs  mod.rs  random.rs
DNA/src/physics/: mod.rs
DNA/src/pll/: CLAUDE.md  circuit.rs  components.rs  fractional_n.rs  integer_n.rs  loop_filter.rs  mod.rs  noise.rs  stability.rs  transient.rs  types.rs
DNA/src/power/: boost.rs  buck.rs  components.rs  ldo.rs  mod.rs  state_space.rs  transient.rs  types.rs
DNA/src/powerlaw/: arena.rs  attachment.rs  cascade.rs  criticality.rs  distribution.rs  edges.rs  metrics.rs  mod.rs  sampling.rs
DNA/src/security/: mod.rs  patterns.rs  scanner.rs  (+1 more)
DNA/tests/: cad_fixtures.rs  comprehensive_tests.rs  ecosystem_stability.rs  simulation_tests.rs
HELIOS/: CLAUDE.md  Cargo.toml  Trunk.toml  build.rs  index.html
HELIOS/server/: Cargo.toml
HELIOS/simulation-cli/: Cargo.toml
HELIOS/src/: cca_projection.rs  galactic_background.rs  heliosphere.rs  heliosphere_model.rs  main.rs  render.rs  render_gl.rs  simulation.rs  solar_wind.rs  star_data.rs  streaming.rs
LEARN/: CLAUDE.md  Cargo.toml  Trunk.toml  index.html
LEARN/AI/: Cargo.toml  Trunk.toml  index.html
LEARN/ARDUINO/: Cargo.toml  Trunk.toml  index.html
LEARN/DATA_STRUCTURES/: Cargo.toml  Trunk.toml  index.html
LEARN/ESP32/: CLAUDE_PROMPT_ESP32.md  Cargo.toml  TESTING.md  Trunk.toml  index.html
LEARN/GIT/: Cargo.toml  Trunk.toml  index.html
LEARN/ML/: Cargo.toml  README.md  cloudflared-config.yml  lesson_00.json  lesson_01.json  lesson_02.json  lesson_03.json  lesson_04.json  lesson_05.json  lesson_06.json  lesson_07.json  lesson_08.json  lesson_09.json  lesson_10.json  lesson_11.json  rust-toolchain.toml
LEARN/OPENCV/: Cargo.toml  Trunk.toml  index.html
LEARN/PYTHON/: Cargo.toml  Trunk.toml  index.html  python_dsa_master_notes.md
LEARN/SENSORS/: Cargo.toml  README.md  Trunk.toml  index.html
LEARN/SLAM/: APPLY_REMAINING_LESSONS.sh  CLAUDE.md  Cargo.toml  LESSON1_ENHANCED.txt  LESSONS_2_TO_5_ENHANCED.md  Trunk.toml  index.html
LEARN/SWARM_ROBOTICS/: Cargo.toml  Trunk.toml  index.html
LEARN/UBUNTU/: Cargo.toml  Trunk.toml  index.html
LEARN/learn_core/: Cargo.toml
LEARN/learn_web/: Cargo.toml
LEARN/src/: demo_runner.rs  lessons.rs  lib.rs  render.rs
LEARN/theme/: README.md  learn-theme.css  learn-theme.js
MCAD/: Cargo.toml  ROADMAP.md  Trunk.toml  index.html
MCAD/docs/: TUTORIAL.md  USER_MANUAL.md
MCAD/src/: command_history.rs  lib.rs  selection3d.rs  snap.rs
SIM/HELIOS/: CLAUDE.md  Cargo.toml
SIM/TOOFOO/: CLAUDE.md  Cargo.toml  WHITEPAPER.md  index.html
SIMULATION/CHLADNI/: CLAUDE.md  Cargo.toml  Trunk.toml  index.html
WELCOME/: CLAUDE.md  Cargo.toml  PLAN.md  Trunk.toml  about.html  build.rs  index.html  license.html  trunk-serve.sh  watch_tree.sh
WELCOME/assets/: theme.css  theme.js
WELCOME/src/: arch_diagram.rs  bubbles.rs  fungal.rs  lib.rs  main.rs  routing.rs  shader.rs
core/: Cargo.toml
core/src/: color.rs  coordinates.rs  heliosphere_model.rs  interaction.rs  lib.rs  solar_wind.rs  spatial.rs  statistics.rs  zones.rs
core/storage-server/: Cargo.toml
core/tests/: comprehensive_tests.rs  simulation_tests.rs
helios/: Cargo.toml  Trunk.toml  index.html
helios/legacy_js_prototype/: AGENTS.md  CURSOR_QUICKSTART.md  DEPLOYMENT_GUIDE.md  Dockerfile.keploy  IMPLEMENTATION_SUMMARY.md  PRELAUNCH_README.md  README.md  RESEARCH_GRADE_HELIOSPHERE_SUMMARY.md  SETUP_COMPLETE.md  SUN_CENTRIC_ARCHITECTURE.md  VERCEL_DEPLOYMENT.md  WORKFLOW_AUTOMATION_TEST_REPORT.md  WORKTREE_CHEATSHEET.md  WORKTREE_GUIDE.md  deploy.sh  docker-compose.keploy.yml  keploy.yaml  next.config.js  package-lock.json  package.json  playwright.config.ts  project.json.example  tailwind.config.ts  tsconfig.json  vitest.config.ts
helios/src/: main.rs  render.rs  simulation.rs  streaming.rs
simulation-cli/: Cargo.toml
simulation-cli/src/: main.rs
too.foo/: Cargo.toml  Trunk.toml  index.html
too.foo/src/: fungal.rs  main.rs  shader.rs
(+1142 files in other folders)
