[workspace]
resolver = "2"
members = [
    # DNA - the shared foundation
    "DNA",

    # L1 Bubbles - Main projects (only actual crates)
    "MCAD/CORE",
    "MCAD/AUTOCRATE",

    "ECAD/CORE",

    "HELIOS/CORE",

    "SHIVAM/CORE",

    "SIMULATIONS/CORE",

    # Landing page
    "WELCOME",

    # Legacy structure (keep for now)
    "SIM/HELIOS",
    "SW/CHLADNI",
    "SW/CRM",
    "SW/PORTFOLIO",
    "SW/SENSORS",
    # Note: SW/AUTOCRATE moved to MCAD/AUTOCRATE

    # Learning platforms
    "LEARN",
    # Note: LEARN/ML excluded - separate server app with different deps

    # Blog platform
    "BLOG",

    # Tools (internal, not deployed)
    "TOOLS/SIMULATION_CLI",
    "TOOLS/STORAGE_SERVER",
    "TOOLS/CLAUDE_AUTOMATION",

    # In development
    "PROJECT_N",
]
# Excluded - different build targets/dependencies
exclude = ["HW/*", "LEARN/ML"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
glam = { version = "0.29", features = ["rand"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "=0.2.93"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dna = { path = "DNA" }

# GPU compute (for CFD, FEA, Thermal)
wgpu = "22.1"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
