# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | ./Cargo.toml
# PURPOSE: Workspace manifest defining all crates and shared dependencies for S3M2P monorepo
# MODIFIED: 2025-12-09
# ═══════════════════════════════════════════════════════════════════════════════

[workspace]
resolver = "2"
members = [
    # DNA - Core algorithms + infrastructure
    "DNA",
    "DNA/SIMULATION_CLI",
    "DNA/STORAGE_SERVER",
    "DNA/CLAUDE_AUTOMATION",

    # CORE - Domain-specific engines
    "SIMULATION/CORE/SIMULATION_ENGINE",
    "SIMULATION/CORE/SPICE_ENGINE",
    "TOOLS/CORE/PLL_ENGINE",
    "TOOLS/CORE/EXPORT_ENGINE",
    "SIMULATION/CORE/WAVE_ENGINE",
    "TOOLS/CORE/AUTOCRATE_ENGINE",
    "TOOLS/CORE/CAD_ENGINE",

    # L1 Bubbles (deployed)
    "WELCOME",
    "HELIOS",
    "BLOG",
    "ARCH",

    # Simulations (L2 under Simulations bubble)
    "SIMULATION/CHLADNI",

    # Tools (L2 under Tools bubble)
    "TOOLS/AUTOCRATE",
    "TOOLS/CAD",
    "TOOLS/CRM",
    "TOOLS/PLL",
    "TOOLS/POWER_CIRCUITS",
    "TOOLS/SPICE",

    # Learn (L2 under Learn bubble)
    "LEARN/SENSORS",
    "LEARN/AI",
    "LEARN/UBUNTU",
    "LEARN/OPENCV",
    "LEARN/ARDUINO",
    "LEARN/ESP32",
    "LEARN/SWARM_ROBOTICS",
    "LEARN/SLAM",
]
# Excluded - different build targets/dependencies
exclude = ["HW/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
glam = { version = "0.29", features = ["rand"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "=0.2.93"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dna = { path = "DNA" }

# GPU compute (for CFD, FEA, Thermal)
wgpu = "22.1"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
