# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | ARCH/Cargo.toml
# PURPOSE: ARCH project dependencies for interactive architecture visualization WASM app
# MODIFIED: 2025-12-09
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "arch"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Architecture visualization for antimony-labs monorepo"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.93"
console_error_panic_hook = "0.1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "MouseEvent",
    "KeyboardEvent",
    "DomRect",
    "CssStyleDeclaration",
    "EventTarget",
    "DomTokenList",
]
