# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | ATLAS/Cargo.toml
# PURPOSE: Package manifest for ATLAS interactive vector maps WASM application
# MODIFIED: 2026-01-25
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "atlas"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.93"
console_error_panic_hook = "0.1"
geo-engine = { path = "CORE/GEO_ENGINE" }
glam = { version = "0.29", features = ["rand"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "DomRect",
    # WebGL2 features
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    # Fetch for loading data
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    # Location for hostname detection
    "Location",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
