# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | BLOG/Cargo.toml
# PURPOSE: Blog engine dependencies for markdown-based content with client-side routing
# MODIFIED: 2025-11-29
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "blog"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.93"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
    "History",
    "Location",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "PopStateEvent",
    "MouseEvent",
    "EventTarget",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde"] }
