[package]
name = "dna"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The genetic code of antimony-labs - shared simulation engine, algorithms, and foundations"

[dependencies]
glam = { version = "0.29", features = ["rand", "serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
async-trait = "0.1"
regex = "1.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
