# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | HELIOS/Cargo.toml
# PURPOSE: Cargo manifest for Helios WASM application with web-sys dependencies
# MODIFIED: 2025-12-02
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "helios"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# WASM bindings
wasm-bindgen = "=0.2.93"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"

# Math and serialization (for heliosphere modules)
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Streaming (Phase 2)
lru = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["json"] }

# DNA foundation (CCA coordinate system)
dna = { path = "../DNA" }

[dependencies.web-sys]
version = "0.3"
features = [
    # Canvas
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    # Window/Document
    "Document",
    "Element",
    "Window",
    "Performance",
    # DOM manipulation
    "DomTokenList",
    # Form elements
    "HtmlInputElement",
    "HtmlButtonElement",
    "InputEvent",
    "EventTarget",
    # Events
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    # Utility
    "console",
]
