# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | MCAD/Cargo.toml
# PURPOSE: Package manifest for MCAD solid modeler WASM application
# MODIFIED: 2026-01-04
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "mcad"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.93"
console_error_panic_hook = "0.1"
cad-engine = { path = "CORE/CAD_ENGINE" }
glam = { version = "0.29", features = ["rand"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "CssStyleDeclaration",
    "DomRect",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    # WebGL2 features
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "WebGlFramebuffer",
    "WebGlRenderbuffer",
    "WebGlTexture",
]

[dev-dependencies]
proptest = "1.4"
