# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | WELCOME/Cargo.toml
# PURPOSE: Cargo manifest for landing page with simulation engine and WASM dependencies
# MODIFIED: 2025-12-09
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "welcome"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
simulation-engine = { path = "../SIMULATION/CORE/SIMULATION_ENGINE" }
glam = { version = "0.29", features = ["rand"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "=0.2.93"
console_error_panic_hook = "0.1"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Location",
    "Window",
    "AnimationEvent",
    "console",
    "HtmlCollection",
    "DomRect",
    "Performance",
    "CanvasGradient",
    "ImageData",
    "CssStyleDeclaration",
    "WheelEvent",
    "MouseEvent",
    "Event",
    "SvgElement",
]
