[package]
name = "core"
version = "0.1.0"
edition = "2021"
description = "Core simulation engine with boid physics, genetics, and spatial indexing"

[dependencies]
glam = { version = "0.29", features = ["rand"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
