[package]
name = "helios"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared core library
core = { path = "../core" }

# Math library (matches too.foo)
glam = { version = "0.29", features = ["rand"] }

# WASM bindings (matches too.foo exactly)
wasm-bindgen = "=0.2.93"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

# Networking
reqwest = { version = "0.11", features = ["json"] }

# WebGPU graphics for 3D sun simulation
wgpu = { version = "22.1", features = ["webgpu", "webgl"] }

# Async runtime for wgpu
pollster = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    # Canvas features
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    # Window/Document features
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Location",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    # GPU/WebGPU features
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuCanvasContext",
    "GpuTextureFormat",
    # Animation & timing
    "AnimationEvent",
    "Performance",
    # Utility features
    "console",
    "HtmlCollection",
    "DomRect",
]
