[package]
name = "simulation-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
glam = { version = "0.29", features = ["rand"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
