[package]
name = "security-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI tool for scanning code for secrets and PII"

[[bin]]
name = "dna-security"
path = "src/main.rs"

[dependencies]
dna = { path = ".." }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
serde_json = "1.0"
