# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | HELIOS/server/Cargo.toml
# PURPOSE: Streaming API server for star data (Google Earth-style on-demand queries)
# MODIFIED: 2025-12-10
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "helios-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "helios-server"
path = "src/main.rs"

[dependencies]
# Core dependencies
dna = { path = "../../DNA" }
glam = { version = "0.29", features = ["serde"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
