# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | AI/Cargo.toml
# PURPOSE: AI/ML tutorial - neural networks, deep learning, transformers
# MODIFIED: 2025-01-02
# ═══════════════════════════════════════════════════════════════════════════════
[package]
name = "ai-learn"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.93"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "CanvasRenderingContext2d",
    "Performance",
    "MouseEvent",
] }
learn_core = { path = "../learn_core" }
learn_web = { path = "../learn_web" }

[profile.release]
opt-level = "z"
lto = true
