# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | GIT/Cargo.toml
# PURPOSE: Git version control tutorial
# MODIFIED: 2025-12-30
# ═══════════════════════════════════════════════════════════════════════════════
[package]
name = "git-learn"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.93"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
] }
learn_core = { path = "../learn_core" }
learn_web = { path = "../learn_web" }
