# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | SENSORS/Cargo.toml
# PURPOSE: Rust package manifest with dependencies and build configuration
# MODIFIED: 2025-12-09
# ═══════════════════════════════════════════════════════════════════════════════
[package]
name = "sensors"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "DomRect",
    "DomTokenList",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlVideoElement",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaTrackConstraints",
    "DeviceMotionEvent",
    "DeviceOrientationEvent",
    "Performance",
    "EventTarget",
    "Event",
    "AddEventListenerOptions",
    "AudioContext",
    "AudioContextOptions",
    "AnalyserNode",
    "MediaStreamAudioSourceNode",
    "Performance",
    "ImageData",
]

[profile.release]
opt-level = "z"
lto = true
