# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | SLAM/Cargo.toml
# PURPOSE: Rust package manifest with dependencies and build configuration
# MODIFIED: 2025-12-02
# ═══════════════════════════════════════════════════════════════════════════════
[package]
name = "slam-learn"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.93"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "z"
lto = true
