# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | LEARN/learn_web/Cargo.toml
# PURPOSE: WASM glue code - canvas, animation, controls, routing
# MODIFIED: 2025-12-11
# LAYER: LEARN → learn_web
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "learn_web"
version.workspace = true
edition.workspace = true
description = "WASM utilities for LEARN apps - canvas, animation, routing"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
learn_core = { path = "../learn_core" }
wasm-bindgen = "=0.2.93"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "DomTokenList",
    "CssStyleDeclaration",
    "NodeList",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "CanvasRenderingContext2d",
    "Performance",
    "Location",
    "Event",
    "EventTarget",
    "InputEvent",
    "MouseEvent",
    "KeyboardEvent",
]

[lints]
workspace = true
