[package]
name = "helios"
version = "0.1.0"
edition = "2021"

[dependencies]
# WASM bindings
wasm-bindgen = "=0.2.93"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    # Canvas
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    # Window/Document
    "Document",
    "Element",
    "Window",
    "Performance",
    # DOM manipulation
    "DomTokenList",
    # Form elements
    "HtmlInputElement",
    "HtmlButtonElement",
    "InputEvent",
    "EventTarget",
    # Events
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    # Utility
    "console",
]
