[package]
name = "too-foo"
version = "0.1.0"
edition = "2021"

[dependencies]
dna = { path = "../../DNA" }
glam = { version = "0.29", features = ["rand"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "=0.2.93"
console_error_panic_hook = "0.1"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Location",
    "Window",
    "AnimationEvent",
    "console",
    "HtmlCollection",
    "DomRect",
    "Performance",
    "CanvasGradient",
    "ImageData", 
]
