# ═══════════════════════════════════════════════════════════════════════════════
# FILE: Cargo.toml | SIMULATION/CHLADNI/Cargo.toml
# PURPOSE: Chladni wave pattern visualization WASM application manifest
# MODIFIED: 2025-12-09
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "chladni"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.93"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlTexture",
    "WebGlUniformLocation",
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AnalyserNode",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaDevices",
    "Navigator",
    "MediaStreamAudioSourceNode",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
glam = "0.29"
wasm-bindgen-futures = "0.4"
wave-engine = { path = "../CORE/WAVE_ENGINE" }
# Note: Using Web Audio API's built-in FFT (AnalyserNode) instead of rustfft
# This is more efficient for WASM and doesn't require additional dependencies
